logs/Slang/generated/hdlconv/hdlconvertor_p825.sv.log
name: hdlconvertor_p825
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:6:1: error: expected member
not #5 n1 (ndata, data);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:7:1: error: expected member
nand #(3,5) n2 (wa, data, clock),
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:9:1: error: expected member
nand #(12,15) n4 (q, nq, wa),
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:11:1: error: expected member
bufif1 #(3,7,13)  q_drive (qout, q, enable),
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:16:15: error: port 'io1' has no I/O member declaration
module iobuf (io1, io2, dir);
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:16:20: error: port 'io2' has no I/O member declaration
module iobuf (io1, io2, dir);
                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:16:25: error: port 'dir' has no I/O member declaration
module iobuf (io1, io2, dir);
                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:17:1: error: expected member
bufif0
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p825.sv:19:1: error: expected member
bufif1
^~~~~~
